--- a/Main_app/templates/main.html
+++ b/Main_app/templates/main.html
@@ -1,1 +1,13 @@
-<h1>장고복습이다.</h1>
+// template 따로 빼는 거 물어보기 
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Main</title>
+</head>
+<body>
+    <h1>테스트입니다. </h1>
+</body>
+</html>
